adds scheme for app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "Master-Memory-Mobile",
+    "scheme": "masterMemory",
     "slug": "Master-Memory-Mobile",
     "platforms": [
       "ios",
